name:               microlens-compat
version:            1.0
cabal-version:      >= 1.10
build-type:         Simple
license:            BSD3
category:           Lenses
author:             David Fox
copyright:          (c) 2015, David Fox
maintainer:         David Fox <dsf@seereason.com>
homepage:           https://github.com/seereason/microlens-compat
bug-reports:        https://github.com/seereason/microlens-compat/issues
stability:          experimental
synopsis:           Re-export microlens declarations as module Control.Lens
description:        Ease use of microlens as a drop-in replacement for lens.

library
  build-depends:    base >= 4.8 && < 5, microlens, microlens-th
  ghc-options:      -Wall -O2
  exposed-modules:  Control.Lens
  default-language: Haskell2010

source-repository head
  type:     git
  location: git://github.com/seereason/microlens-compat.git
